src-tauri/tests/snapshots/streaming_send_params__params_with_source_repo_path.snap
---
source: tests/streaming_send_params.rs
expression: "&params"
---
cwd: /abs/workspace
effortLevel: high
fastMode: false
model: claude-opus-4
permissionMode: bypassPermissions
prompt: hello
provider: claude
resume: ~
sessionId: sidecar-sess-1
sourceRepoPath: /Users/me/repos/my-repo
workspaceId: w-5
